--- a/CMS_APP/Views/Designation/Designationlist.cshtml
+++ b/CMS_APP/Views/Designation/Designationlist.cshtml
@@ -60,18 +60,19 @@
 </style>
 
 <div class="col-xl-12 col-md-12">
+	
 	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 	<div class="card table-card">
 		<div class="card-header">
 			<h5>Designation List</h5>
 			<div class="card-header-right">
 
-				<button type="button" class="btn1 btn-primary" width="10px" height="10px" data-toggle="modal" data-target="#exampleModalCenter">
+				<button type="button" class="btn1 btn-primary" width="10px" height="10px" data-toggle="modal" data-target="#exampleModalCenter" onclick="clearModal()">
 					Create New
 				</button>
 
 				@*Add Reason--pop box*@
-				<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+				<div class="modal fade" id="exampleModalCenter"  tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 					<div class="modal-dialog modal-dialog-centered" role="document">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
@@ -88,14 +89,15 @@
 										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Designation</span>
 									</label>
 									<input asp-for="Designation" type="text" id="Designation" class="form-control validate"  >
-									<span asp-validation-for="Designation" class="text-danger"></span>
+
+									<span asp-validation-for="Designation" class="text-danger" id="DesignationError"></span>
 									
 								</div>
 
 								<input type="hidden" id="create_User" value="@create_User" class="form-control validate">
 
 								<div class="modal-footer d-flex justify-content-center">
-									<button class="btn btn-deep-blue" id="save-btn" data-dismiss="modal"> Save</button>
+									<button class="btn btn-deep-blue" id="save-btn" > Save</button>
 
 								</div>
 							</div>
@@ -200,13 +202,14 @@
 														<label class="text-right" data-error="wrong" data-success="left" for="orangeForm-name">
 															<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">	Designation </span>
 														</label>
-														<input type="text" id="updatedesignation_@data.DesignationID" value="@data.Designation" class="form-control validate">
+														<input type="text" id="updatedesignation_@data.DesignationID" value="@data.Designation" class="form-control validate" >
+														<span asp-validation-for="Designation" class="text-danger" id="DesignationError_@data.DesignationID"></span>
 
 														<input type="hidden" id="update_change_user_@data.DesignationID" value="@create_User" class="form-control validate">
 														<input type="hidden" id="update_change_Date_@data.DesignationID" value="@data.change_Date" class="form-control validate">
 													</div>
 													<div class="modal-footer d-flex justify-content-center">
-														<button class="btn btn-deep-blue" id="edit-btn" onclick="testfunction(@data.DesignationID)"> Edit </button>
+														<button class="btn btn-deep-blue" id="edit-btn" onclick="updatefunction(@data.DesignationID)"> Edit </button>
 													</div>
 
 												</div>
@@ -233,67 +236,87 @@
 @*Update Designation--pop box*@
 
 
-
-
-
-
-
 <!--  project and team member end -->
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<script>
-		var saveButton = document.getElementById('save-btn'); // add a click event listener to the Save button
-		saveButton.addEventListener('click', function () {
-			// refresh the page after 500 milliseconds (0.5 seconds)
-			setTimeout(function () {
-				location.reload();
-			}, 500);
-		});
+		//var saveButton = document.getElementById('save-btn'); // add a click event listener to the Save button
+		//saveButton.addEventListener('click', function () {
+		//	// refresh the page after 500 milliseconds (0.5 seconds)
+		//	setTimeout(function () {
+		//		location.reload();
+		//	}, 5000);
+		//});
+
+
+	   function clearModal(){
+            // Clear the input field values 
+		   $('#Designation').val('');
+		   $('#DesignationError').text('');
+	   }
 
 
 
-		$(function () {
+		$(function() {
 			// Add click event handler to the Save button
 			$('#save-btn').click(function () {
+
+			debugger
 				// Get the values of the input fields
 			var Designation = $('#Designation').val();
-				var createdBy = $('#create_User').val();
+			var createdBy = $('#create_User').val();
+			
 
+			if (Designation === '') {
+					$('#DesignationError').text('Designation Is Required.');
+					return;
+			}
 				// Make the AJAX call
 				$.ajax({
-				url: '/Designation/AddDesignationlist',
+					url: '/Designation/AddDesignationlist',
 					method: 'POST',
-					data: {
-					Designation: Designation,
-						create_User: createdBy
+					data: {Designation: Designation,create_User: createdBy
 					},
 					success: function (response) {
+						debugger
 						// Handle the response data here
 						console.log(response);
-
+						alert(response)
 						$('#exampleModalCenter').modal('hide');
-						location.reload();
+						location.reload(true);
 					},
-					error: function (jqXHR, textStatus, errorThrown) {
+					error: function (response) {
 						// Handle errors here
+					$('#DesignationError').text(response.message);
 						console.error(errorThrown);
+
 					}
 				});
 			});
-		});
-
-		function testfunction(id) {
 
 			debugger
+			$('#Designation').on('input', function () {
+				// Clear the error message when the field is not empty
+				if ($(this).val() !== '') {
+					$('#DesignationError').text('');
+				}
+			});
+		});
 
+		function updatefunction(id) {
 		    var designationid = $('#updatedesignationid_' + id).val();
 			var designation = $('#updatedesignation_' + id).val();
 			var updatedby = $('#update_change_user_' + id).val();
 			var updatedtime = $('#update_change_Date_' + id).val();
 
+		if (designation === '') {
+			// Show error message and return without making the AJAX call
+			$('#DesignationError_' + id).text('Designation Is Required.');
+			return;
+		}
 			$.ajax({
-			url: '/Designation/UpdateDesignationlist',
+				url: '/Designation/UpdateDesignationlist',
 				method: 'put',
 				data: {
 				designationid: designationid,
@@ -304,33 +327,38 @@
 				success: function (response) {
 					console.log(response);
 					$('#examplemodalcenter').modal('hide');
-				url: '/Designation/UpdateDesignationlist',
-						location.reload();
+					location.reload();
 				},
-				error: function (jqxhr, textstatus, errorthrown) {
+			    error: function (response) {
 					console.error(errorthrown);
+				}
+			});
+			
+			$('#updatedesignation_' + id).on('input', function () {
+				// Clear the error message when the field is not empty
+				if ($(this).val() !== '') {
+					$('#DesignationError_' + id).text('');
 				}
 			});
 		}
 
 		function deletefunction(id) {
-			debugger
-
-		var designationid = $('#deleteDesignationID_' + id).val();
+		    var designationid = $('#deleteDesignationID_' + id).val();
 
 			$.ajax({
-			url: '/Designation/DeleteDesignationlist',
-				method: 'put',
+			    url: '/Designation/DeleteDesignationlist',
+				method:'put',
 				data: {
-				designationid: designationid,
-
+				designationid: designationid
 				},
 				success: function (response) {
+					debugger
 					console.log(response);
-					$('#examplemodalcenter').modal('hide');
+					$('#examplemodalcenter').modal('hide');   
 					location.reload();
 				},
-				error: function (jqxhr, textstatus, errorthrown) {
+				error: function (response) {
+					debugger
 					console.error(errorthrown);
 				}
 			});
