--- a/CMS_APP/Views/Role/Rolelist.cshtml
+++ b/CMS_APP/Views/Role/Rolelist.cshtml
@@ -64,7 +64,7 @@
 			<h5>Role List</h5>
 			<div class="card-header-right">
 
-				<button type="button" class="btn1 btn-primary" width="10px" height="10px" data-toggle="modal" data-target="#exampleModalCenter">
+				<button type="button" class="btn1 btn-primary" width="10px" height="10px" data-toggle="modal" data-target="#exampleModalCenter" onclick="clearModal()">
 					Create New
 				</button>
 
@@ -85,13 +85,14 @@
 
 										<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">RoleName</span>
 									</label>
-									<input type="text" id="RoleName" class="form-control validate">
+									<input asp-for="RoleName" type="text" id="RoleName" class="form-control validate">
+									<span asp-validation-for="RoleName" class="text-danger" id="RoleError"></span>
 								</div>
 
 								<input type="hidden" id="create_User" value="@create_User" class="form-control validate">
 							
 								<div class="modal-footer d-flex justify-content-center">
-									<button class="btn btn-deep-blue" id="save-btn" data-dismiss="modal"> Save </button>
+									<button class="btn btn-deep-blue" id="save-btn" > Save </button>
 
 								</div>
 							</div>
@@ -152,7 +153,7 @@
 										<div class="dropdown-menu">
 											@*<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.DesignationID">Edit</button>
 										*@
-											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.RoleId">Edit</button>
+											<button type="button" id="EDIT_@data.RoleId" class="dropdown-item" data-toggle="modal" data-target="#UpdateModalCenter_@data.RoleId">Edit</button>
 											<button type="button" class="dropdown-item" data-toggle="modal" data-target="#myModal_@data.RoleId">Delete</button>
 										</div>
 									</div>
@@ -202,7 +203,8 @@
 
 																<span class="modal-text w-100  font-weight-bold " style="vertical-align: middle; font-size: 1.2em; color: grey;">Role</span>
 															</label>
-															<input type="text" id="updaterole_@data.RoleId" value="@data.RoleName" class="form-control validate">
+														<input asp-for="RoleName" type="text" id="updaterole_@data.RoleId" value="@data.RoleName" class="form-control validate">
+														<span asp-validation-for="RoleName" class="text-danger" id="RoleError_@data.RoleId"></span>
 
 
 														<input type="hidden" id="update_change_user_@data.RoleId" value="@create_User" class="form-control validate">
@@ -211,7 +213,7 @@
 
 													</div>
 													<div class="modal-footer d-flex justify-content-center">
-														<button class="btn btn-deep-blue" id="edit-btn" onclick="testfunction(@data.RoleId)"> Edit </button>
+														<button class="btn btn-deep-blue" id="edit-btn" onclick="updatefunction(@data.RoleId)"> Edit </button>
 													</div>
 
 												</div>
@@ -245,15 +247,13 @@
 <!--  project and team member end -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<script>
-	var saveButton = document.getElementById('save-btn'); // add a click event listener to the Save button
-	saveButton.addEventListener('click', function () {
-		// refresh the page after 500 milliseconds (0.5 seconds)
-		setTimeout(function () {
-			location.reload();
-		}, 500);
-	});
+ <script>
+	function clearModal() {
+		// Clear the input field values
+		$('#RoleName').val('');
+		$('#RoleError').text('');
 
+	}
 
 
 	$(function () {
@@ -262,6 +262,16 @@
 			// Get the values of the input fields
 			var RoleName = $('#RoleName').val();
 			var createdBy = $('#create_User').val();
+
+			if (RoleName === '') {
+				$('#RoleError').text('Role is Required.');
+				return;
+			}
+
+			if (!/^[a-zA-Z0-9]+(\s[a-zA-Z0-9]+)?$/.test(RoleName.trim())) {
+				$('#RoleError').text('Role is incorrect.Please enter a valid designation.');
+				return;
+			}
 
 			// Make the AJAX call
 			$.ajax({
@@ -278,22 +288,47 @@
 					$('#exampleModalCenter').modal('hide');
 					location.reload();
 				},
-				error: function (jqXHR, textStatus, errorThrown) {
-					// Handle errors here
+				error: function (response) {
+				
+					if (!response.IsSuccessful) {
+						$('#RoleError').text("Role already exists. Please choose a different name.");
+						return;
+					}
 					console.error(errorThrown);
 				}
 			});
 		});
+		$('#RoleName').on('input', function () {
+			// Clear the error message when the field is not empty
+			if ($(this).val() !== '') {
+				$('#RoleError').text('');
+			}
+		});
 	});
 
-	function testfunction(id) {
-
-		debugger
+	function updatefunction(id) {
 
 		var RoleId = $('#updateRoleId_' + id).val();
 		var RoleName = $('#updaterole_' + id).val();
 		var updatedby = $('#update_change_user_' + id).val();
 		var updatedtime = $('#update_change_Date_' + id).val();
+
+		if (RoleName === '') {
+			// Show error message and return without making the AJAX call
+			$('#RoleError_'+ id).text('Role is Required.');
+				setTimeout(function () {
+					$('#"RoleError_'+id).text('');
+				}, 3000);
+			return;
+		}
+		if (!/^[a-zA-Z0-9]+(\s[a-zA-Z0-9]+)?$/.test(RoleName.trim())) {
+			// Show error message and return without making the AJAX call
+			$('#RoleError_' + id).text('Role Is Incorrect.Please enter a valid Role.');
+				setTimeout(function () {
+					$('#"RoleError_'+ id).text('');
+				}, 3000);
+			return;
+		}
 
 		$.ajax({
 			url: '/Role/UpdateRolelist',
@@ -310,16 +345,28 @@
 				url: '/Role/UpdateRolelist',
 					location.reload();
 			},
-			error: function (jqxhr, textstatus, errorthrown) {
+			error: function (response) {
+				if (!response.IsSuccessful) {
+					$('#RoleError_' + id).text("Role already exists. Please choose a different name.");
+					setTimeout(function () {
+						$('#RoleError_' + id).text('');
+					}, 3000);
+					return;
 				console.error(errorthrown);
+			}
+			}
+		});
+		$('#updaterole_' + id).on('input', function () {
+			// Clear the error message when the field is not empty
+			if ($(this).val() !== '') {
+				$('#RoleError_' + id).text('');
 			}
 		});
 	}
 
 
 	function deletefunction(id) {
-		debugger
-
+		
 		var roleid = $('#deleteroleid_' + id).val();
 
 		$.ajax({
@@ -334,7 +381,7 @@
 				$('#examplemodalcenter').modal('hide');
 				location.reload();
 			},
-			error: function (jqxhr, textstatus, errorthrown) {
+			error: function (response) {
 				console.error(errorthrown);
 			}
 		});
