Checkin_by_Meera

--- a/CMS_APP/Views/Round/Roundlist.cshtml
+++ b/CMS_APP/Views/Round/Roundlist.cshtml
@@ -253,7 +253,7 @@
 
 
 	$(function () {
-		debugger // Add click event handler to the Save button
+		 // Add click event handler to the Save button
 		$('#save-btn').click(function () {
 			// Get the values of the input fields
 			var Round_Name = $('#Round_Name').val();
@@ -284,7 +284,7 @@
 
 	function testfunction(id) {
 
-		debugger
+		
 
 		var RoundID = $('#updateRoundID_' + id).val();
 		var Round_Name = $('#updateround_' + id).val();
@@ -314,7 +314,7 @@
 
 
 	function deletefunction(id) {
-		debugger
+		
 
 		var roundid = $('#deleteroundid_' + id).val();
 
