--- a/CMS_APP/Views/Technology/Technologylist.cshtml
+++ b/CMS_APP/Views/Technology/Technologylist.cshtml
@@ -274,7 +274,7 @@
 
 
         $(function () {
-            debugger // Add click event handler to the Save button
+             // Add click event handler to the Save button
             $('#save-btn').click(function () {
                 // Get the values of the input fields
                 var TechnologyName = $('#TechnologyName').val();
@@ -307,7 +307,6 @@
 
         function testfunction(id) {
 
-            debugger
 
             var TechnologyId = $('#updateTechnologyId_' + id).val();
             var TechnologyName = $('#updatetechnologyname_' + id).val();
@@ -340,7 +339,7 @@
         }
 
     function deletefunction(id) {
-        debugger
+        
 
         var TechnologyId = $('#deleteTechnologyid_' + id).val();
 
