--- a/CMS_APP/Views/Shared/_Layout.cshtml
+++ b/CMS_APP/Views/Shared/_Layout.cshtml
@@ -313,9 +313,9 @@
                             <div class="pcoded-navigation-label" data-i18n="nav.category.forms">Interviewer</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li>
-                                    <a href="form-elements-component.html" class="waves-effect waves-dark">
-                                        <span class="pcoded-micon"><i class="ti-clipboard"></i><b>FC</b></span>
-                                        <span class="pcoded-mtext" data-i18n="nav.form-components.main">Interviewer Managment</span>
+                                    <a href="@Url.Action("InterviewerList","Interviewer")" class="waves-effect waves-dark">
+                                        <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                        <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Interviewer List</span>
                                         <span class="pcoded-mcaret"></span>
                                     </a>
                                 </li>
